--- a/README
+++ b/README
@@ -16,10 +16,16 @@
 	command : sh geoip.sh add ip 192.168.1.2
 	command : sh geoip.sh add ip 192.168.1.0/24
 
- 6. sh geoip.sh -l   : 顯示當前 iptables geoip 設定
+ 6. 更新geoip庫
+	command：sh updata.sh
 
- 7. sh geoip.sh -d   : 刪除所有 iptables geoip 設定
+ 7. iptables LOG 開關
+	command：sh geoip.sh on log  
+	command：sh geoip.sh off log  
+ 
+ 8. sh geoip.sh -l   : 顯示當前 iptables geoip 設定
 
- 8. 更新geoip庫：sh updata.sh
+ 9. sh geoip.sh -d   : 刪除所有 iptables geoip 設定
+
 
 # 國家二位代碼 ISO 3166-1 查詢 ：https://zh.wikipedia.org/wiki/%E5%9C%8B%E5%AE%B6%E5%9C%B0%E5%8D%80%E4%BB%A3%E7%A2%BC
